[package]
name = "moq-wasm"
version = "0.1.0"
authors = ["Luke Curley <kixelated@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

console_error_panic_hook = "0.1"
custom-elements = "0.2"
gloo-net = "0.6"

anyhow = "1"
thiserror = "1"

web-transport = "0.6"
moq-transfork = "0.1"
moq-karp = { version = "0.1", default-features = false }
web-codecs = "0.2"

url = "2"
hex = "0.4"

tracing = "0.1"
wasm-tracing = "0.2"

tokio = { version = "1", features = ["sync"] }
futures = "0.3"

js-sys = "0.3.70"

[dependencies.web-sys]
version = "0.3.70"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"Node",
	"Text",

	# WebCodecs
	"VideoDecoder",
	"VideoDecoderInit",
	"VideoDecoderConfig",
	"VideoFrame",
	"VideoColorSpaceInit",
	"EncodedVideoChunk",
	"EncodedVideoChunkInit",
	"EncodedVideoChunkType",

	# Canvas stuff
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"HtmlImageElement",
]
